--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@storybook/addon-interactions": "7.6.19",
     "@storybook/addon-links": "7.6.19",
     "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "7.6.19",
     "@storybook/react": "7.6.19",
     "@storybook/react-vite": "7.6.19",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-storybook": "^0.8.0",
+    "less": "^4.2.0",
     "storybook": "7.6.19",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
