--- a/package.json
+++ b/package.json
@@ -17,15 +17,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-interactions": "8.6.14",
-    "@storybook/addon-links": "8.6.14",
-    "@storybook/addon-onboarding": "8.6.14",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "8.6.14",
-    "@storybook/test": "8.6.14",
+    "@chromatic-com/storybook": "^4.0.1",
+    "@storybook/addon-links": "9.0.18",
+    "@storybook/addon-onboarding": "9.0.18",
+    "@storybook/react": "9.0.18",
+    "@storybook/react-vite": "9.0.18",
     "@types/paper": "^0.12.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -35,10 +31,11 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-storybook": "^9.0.18",
     "less": "^4.2.0",
-    "storybook": "8.6.14",
+    "storybook": "9.0.18",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "@storybook/addon-docs": "9.0.18"
   }
 }
